--- a/pyDF-data/pyproject.toml
+++ b/pyDF-data/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "DeepFilterDataLoader"
-version = "0.5.3"
+version = "0.5.4-pre"
 classifiers = [
     "Programming Language :: Rust"
 ]
