--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,8 +72,13 @@ jobs:
           - os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             container: quay.io/pypa/manylinux_2_28_x86_64:latest
+          - os: ubuntu-22.04
+            target: x86_64-unknown-linux-gnu
+            container: quay.io/pypa/manylinux_2_28_aarch64:latest
           - os: macos-13
             target: x86_64-apple-darwin
+          - os: macos-13
+            target: aarch64-apple-darwin
           - os: windows-2022
             target: x86_64-pc-windows-msvc
         exclude:
@@ -124,6 +129,16 @@ jobs:
         with:
           toolchain: stable
           target: ${{ matrix.target }}
+
+      - name: Build source distributio
+        run: |
+          mkdir -p target/wheels
+          maturin build --profile=release-lto \
+            --target=${{ matrix.target }} \
+            -m ${{ matrix.df_wheel }}/Cargo.toml \
+            --sdist \
+            -i python${{ matrix.python.version }} \
+            -o target/wheels/
 
       - name: Build wheel unix
         if: runner.os != 'windows'
@@ -201,8 +216,10 @@ jobs:
           USER: ${{ secrets.PYPI_USER }}
           PW: ${{ secrets.PYPI_PW }}
         run: |
-          maturin upload -u "$USER" -p "$PW" libdf-wheels/*${{ env.DF_VERSION }}*
-          maturin upload -u "$USER" -p "$PW" deepfilternet-wheels/*${{ env.DF_VERSION }}*
+          ls -l libdf-wheels/*${{ env.DF_VERSION }}*
+          ls -l deepfilternet-wheels/*${{ env.DF_VERSION }}*
+          # maturin upload -u "$USER" -p "$PW" libdf-wheels/*${{ env.DF_VERSION }}*
+          # maturin upload -u "$USER" -p "$PW" deepfilternet-wheels/*${{ env.DF_VERSION }}*
 
   build-arm-wheels:
     name: Cross Compile ARM Python Wheels
