--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,14 +73,14 @@ jobs:
             os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             container: quay.io/pypa/manylinux_2_28_x86_64:latest
-          - build: linux-arm-v7
-            os: ubuntu-22.04
-            target: x86_64-unknown-linux-gnu
-            container: quay.io/pypa/manylinux_2_28_aarch64:latest
           - build: linux-arm-aarch64
             os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
-            container: quay.io/pypa/manylinux_2_28_armv7l:latest
+            container: quay.io/pypa/manylinux_2_28_aarch64:latest
+          # - build: linux-arm-v7
+            # os: ubuntu-22.04
+            # target: x86_64-unknown-linux-gnu
+            # container: quay.io/pypa/manylinux_2_28_armv7l:latest
           - build: macos-x86
             os: macos-13
             target: x86_64-apple-darwin
