--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -229,8 +229,8 @@ jobs:
         run: |
           ls -l libdf-wheels/*${{ env.DF_VERSION }}*
           ls -l deepfilternet-wheels/*${{ env.DF_VERSION }}*
-          # maturin upload -u "$USER" -p "$PW" libdf-wheels/*${{ env.DF_VERSION }}*
-          # maturin upload -u "$USER" -p "$PW" deepfilternet-wheels/*${{ env.DF_VERSION }}*
+          maturin upload -u "$USER" -p "$PW" libdf-wheels/*${{ env.DF_VERSION }}*
+          maturin upload -u "$USER" -p "$PW" deepfilternet-wheels/*${{ env.DF_VERSION }}*
 
   build-arm-wheels:
     name: Cross Compile ARM Python Wheels
@@ -411,16 +411,16 @@ jobs:
             target: aarch64-unknown-linux-gnu
             libname: libdeep_filter_ladspa
             libext: so
-          - build: macos-x86
-            os: macos-x86
-            target: x86_64-apple-darwin
-            libname: libdeep_filter_ladspa
-            libext: dylib
-          - build: macos-aarch64
-            os: macos-aarch64
-            target: aarch64-apple-darwin
-            libname: libdeep_filter_ladspa
-            libext: dylib
+          # - build: macos-x86
+          #   os: macos-x86
+          #   target: x86_64-apple-darwin
+          #   libname: libdeep_filter_ladspa
+          #   libext: dylib
+          # - build: macos-aarch64
+          #   os: macos-aarch64
+          #   target: aarch64-apple-darwin
+          #   libname: libdeep_filter_ladspa
+          #   libext: dylib
           - build: win-msvc
             os: windows-2022
             target: x86_64-pc-windows-msvc
