--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -374,7 +374,7 @@ jobs:
 
   build-deepfilter-ladspa:
     needs: ['create-release']
-    runs-on: ${{ matrix.platform.os }}
+    runs-on: ${{ matrix.os }}
     env:
       # For some builds, we use cross to test on 32-bit and big-endian
       # systems.
